ccenter/main/default/objects/Distribution_Product__c/Distribution_Product__c.object-meta.xml
<CustomObject>
    <description>Product that is distributed to a household and how much of that product for a distribution.</description>
    <label>Distribution Product</label>
    <nameField>
        <displayFormat>DP-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Distribution Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>