ccenter/main/default/objects/Distribution_Product__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the distribution this product is allocated for.</description>
    <label>Distribution</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Distribution__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filterItems>
        <filterItems>
            <field>Distribution__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Distribution__c</referenceTo>
    <relationshipLabel>Distribution Products</relationshipLabel>
    <relationshipName>Distribution_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>