ccenter/main/default/objects/Distribution_Product__c/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <label>Household Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Household_Size</valueSetName>
    </valueSet>
</CustomField>