ccenter/main/default/objects/Distribution_Product__c/fields/Product_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Location__c</fullName>
    <formula>Text( Product__r.Location__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Location</label>
    <type>Text</type>
</CustomField>