ccenter/main/default/objects/Distribution_Product__c/fields/Quantity_Dispersed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Dispersed__c</fullName>
    <description>How many of a product is received for a distribution.  This is household size specific.</description>
    <label>Quantity Dispersed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>