ccenter/main/default/objects/Distribution_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Distribution__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Location__c</columns>
    <columns>Household_Size__c</columns>
    <columns>Quantity_Dispersed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>